added urban dir command